--- a/public/main.css
+++ b/public/main.css
@@ -1,22 +1,25 @@
 .container {
-  width:100%;
-  margin:auto;
+  width: 720px;
+  margin: auto;
 }
 
 .col-left {
-  width:50%;
-  float:left;
-  padding=100px;
+  width: 50%;
+  float: left;
 }
 
 .col-right {
-  width:50%;
-  float:right;
+  width: 50%;
+  float: right;
+}
+
+.col-left-space {
+  padding-left: 100px;
 }
 
 p {
-  white-space:nowrap;
-  text-overflow:ellipsis;
-  overflow:hidden;
-  padding=100px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  font-size: medium;
 }
