--- a/views/main.html
+++ b/views/main.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" type="text/css" href="/public/main.css">
     </head>
     <body>
+		<title>NAS</title>
         <div class="container">
             <div class="col-left">
                 %for item in items:
