--- a/views/login.html
+++ b/views/login.html
@@ -3,17 +3,31 @@
 <head>
     <meta charset="utf-8">
     <meta lang="zh_cn">
-    <link rel="stylesheet" type="text/css" href="/public/main.css">
+    <script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.2.3/js/bootstrap.min.js"></script>
+    <link href="/public/main.css" rel="stylesheet" type="text/css">
+    <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.2.3/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <title>Login</title>
-    <div class="container">
-        <div class="col-center">
-            <form action="/login" method="post">
-                <p>Username：<input name="user" type="text" /></p>
-                <p>Password：<input name="passwd" type="password" /></p>
-                <p><input value="Login" type="submit" /></p>
-            </form>
+    <div class="container-fluid text-center">
+        <div class="row gy-5 align-items-center">
+            <div class="col-xs">
+                <form action="/login" method="post">
+                    <div class="row mb-3">
+                        <label for="inputUsername" class="col-sm-2 col-form-label">Username</label>
+                        <div class="col-sm-10">
+                            <input name="user" type="text" class="form-control" id="inputUsername">
+                        </div>
+                    </div>
+                    <div class="row mb-3">
+                        <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
+                        <div class="col-sm-10">
+                            <input name="passwd" type="password" class="form-control" id="inputPassword">
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Login</button>
+                </form>
+            </div>
         </div>
     </div>
 </body>
