--- a/views/main.html
+++ b/views/main.html
@@ -2,21 +2,37 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" type="text/css" href="/public/main.css">
+        <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.2.3/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.2.3/js/bootstrap.bundle.min.js"></script>
+        <script src="/public/main.js"></script>
+        <script type="text/javascript">
+            let params = {{!params}};
+            let user = '{{!user}}';
+        </script>
     </head>
     <body>
 		<title>NAS</title>
-        <div class="container">
-            <div class="col-left">
-                %for item in items:
-                <p><a href="{{item['path']}}">{{item['title']}}</a></p>
-                %end
+        <div class="container-fluid">
+            %include('nav.html')
+            <div class="container text-center">
+                <table class="table table-hover table-responsive table-scrollable">
+                    <thead>
+                        <tr>
+                            <div class="col-md-3"><th>File</th></div>
+                            <div class="col-md-3"><th>Type</th></div>
+                            <div class="col-md-3"><th>Size</th></div>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td class="text-truncate" style="max-width:200px;"><a href="#">dummy</a></td>
+                            <td>D</td>
+                            <td>0</td>
+                        </tr>
+                    </tbody>
+                </table>
             </div>
-            <div class="col-right">
-                %for item in items:
-                <p class="col-left-space">{{item['size']}}</p>
-                %end
-            </div>
+            %include('footer.html')
         </div>
     </body>
 </html>
