--- a/views/nav.html
+++ b/views/nav.html
@@ -5,14 +5,14 @@
             <li class="breadcrumb-item active" aria-current="page">dummy</li>
         </ol>
         <div class="dropdown sign-out">
-            <button class="btn link-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+            <button class="btn link-primary dropdown-toggle user-name" data-bs-toggle="dropdown" aria-expanded="false">
             </button>
             <ul class="dropdown-menu">
                 <li><a class="dropdown-item text-bg-light link-secondary" href="/login">Login</a></li>
             </ul>
         </div>
         <div class="dropdown sign-in">
-            <button class="btn link-primary dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+            <button class="btn link-primary dropdown-toggle user-name" data-bs-toggle="dropdown" aria-expanded="false">
             </button>
             <ul class="dropdown-menu">
                 <li><a class="dropdown-item text-bg-light link-success" href="#">Profile</a></li>
