add hls play support

--- a/views/main.html
+++ b/views/main.html
@@ -21,6 +21,7 @@
                             <div class="col-md-3"><th>File</th></div>
                             <div class="col-md-3"><th>Type</th></div>
                             <div class="col-md-3"><th>Size</th></div>
+                            <div class="col-md-3"><th>Action</th></div>
                         </tr>
                     </thead>
                     <tbody>
@@ -28,6 +29,7 @@
                             <td class="text-truncate" style="max-width:200px;"><a href="#">dummy</a></td>
                             <td>D</td>
                             <td>0</td>
+                            <td>play</td>
                         </tr>
                     </tbody>
                 </table>
