--- a/views/main.html
+++ b/views/main.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.2.3/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.2.3/js/bootstrap.bundle.min.js"></script>
+        <script src="/public/cookie.js"></script>
         <script src="/public/main.js"></script>
         <script type="text/javascript">
             let params = {{!params}};
