--- a/views/play.html
+++ b/views/play.html
@@ -7,8 +7,11 @@
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="https://cdn.bootcdn.net/ajax/libs/video.js/8.0.4/video.min.js"></script>
     <link href="https://cdn.bootcdn.net/ajax/libs/video.js/8.0.4/video-js.min.css" rel="stylesheet">
-    <script src="/public/cookie.js"></script>
+    <script src="/public/common.js"></script>
     <script src="/public/play.js"></script>
+    <script type="text/javascript">
+      let filepath = "{{!filepath}}";
+    </script>
     <link rel="stylesheet" type="text/css" href="/public/play.css" />
   </head>
   <body>
