--- a/views/footer.html
+++ b/views/footer.html
@@ -6,10 +6,10 @@
                     10
                 </button>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item page-size-sel" href="#">10</a></li>
-                    <li><a class="dropdown-item page-size-sel" href="#">20</a></li>
-                    <li><a class="dropdown-item page-size-sel" href="#">50</a></li>
-                    <li><a class="dropdown-item page-size-sel" href="#">100</a></li>
+                    <li><a class="dropdown-item page-size-sel" href="">10</a></li>
+                    <li><a class="dropdown-item page-size-sel" href="">20</a></li>
+                    <li><a class="dropdown-item page-size-sel" href="">50</a></li>
+                    <li><a class="dropdown-item page-size-sel" href="">100</a></li>
                 </ul>
             </div>
         </li>
@@ -25,15 +25,15 @@
                     1/4
                 </button>
                 <ul class="dropdown-menu page-items">
-                    <li><a class="dropdown-item" href="#">1</a></li>
+                    <li><a class="dropdown-item" href="">1</a></li>
                 </ul>
             </div>
         </li>
         <li class="page-item">
-            <a class="page-link page-next" href="#"> > </a>
+            <a class="page-link page-next" href=""> > </a>
         </li>
         <li class="page-item">
-            <a class="page-link page-end" href="#"> >> </a>
+            <a class="page-link page-end" href=""> >> </a>
         </li>
     </ul>
 </nav>
