--- a/views/nav.html
+++ b/views/nav.html
@@ -15,8 +15,8 @@
             <button class="btn link-primary dropdown-toggle user-name" data-bs-toggle="dropdown" aria-expanded="false">
             </button>
             <ul class="dropdown-menu">
-                <li><a class="dropdown-item text-bg-light link-success" href="#">Profile</a></li>
-                <li><a class="dropdown-item text-bg-light link-primary" href="#">Security</a></li>
+                <li><a class="dropdown-item text-bg-light link-success" href="">Profile</a></li>
+                <li><a class="dropdown-item text-bg-light link-primary" href="">Security</a></li>
                 <li><a class="dropdown-item text-bg-light link-danger" href="/logout">Exit</a></li>
             </ul>
         </div>
