--- a/views/main.html
+++ b/views/main.html
@@ -27,7 +27,7 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td class="text-truncate" style="max-width:200px;"><a href="#">dummy</a></td>
+                            <td class="text-truncate" style="max-width:200px;"><a href="">dummy</a></td>
                             <td>D</td>
                             <td>0</td>
                             <td>play</td>
