--- a/views/footer.html
+++ b/views/footer.html
@@ -14,10 +14,10 @@
             </div>
         </li>
         <li class="page-item page-start">
-            <a class="page-link"> << </a>
+            <a class="page-link" href=""> << </a>
         </li>
         <li class="page-item page-prev">
-            <a class="page-link"> < </a>
+            <a class="page-link" href=""> < </a>
         </li>
         <li>
             <div class="dropup">
