--- a/views/play.html
+++ b/views/play.html
@@ -19,7 +19,7 @@
       <div class="group_1 flex-col">
         <div class="group_2 flex-col">
           <div class="section_1 flex-col">
-            <button type="button" class="btn btn-primary" title="如果出现有声音无画面的问题，可以切换兼容模式">
+            <button type="button" class="button_1 btn btn-primary" title="如果出现有声音无画面的问题，可以切换兼容模式">
               兼容模式
             </button>
             <div class="section_2 flex-col justify-end">
