--- a/public/play.css
+++ b/public/play.css
@@ -25,8 +25,8 @@ body {
 
 .section_1 {
     box-shadow: 0px 8px 47px 0px rgba(0, 0, 0, 0.3);
-    height: 500px;
-    width: 900px;
+    min-height: 480px;
+    width: 100vw;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -34,8 +34,8 @@ body {
 }
 
 .section_2 {
-    width: 900px;
-    height: 500px;
+    width: 100%;
+    height: 100%;
     background: url(/public/play-bg.png) -47px -39px no-repeat;
     /*background-color: ;*/
     background-size: 994px 594px;
